apps/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cilium-gateway
  namespace: gateway
  annotations:
    cert-manager.io/cluster-issuer: cloudflare
    external-dns.alpha.kubernetes.io/target: cluster.benwoodward.cloud.
spec:
  gatewayClassName: cilium
  listeners:
    - protocol: HTTPS
      port: 443
      name: https-gateway
      hostname: "*.benwoodward.cloud"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: benwoodward-cloud-tls
            namespace: cert-manager # cross-namespace certificate reference
      allowedRoutes:
        namespaces:
          from: All
